codama-syn-helpers/tests-macros/tests/as_path_list/from_path.fail.stderr
error: expected a list: `foo(...)` or `foo = (...)`
 --> tests/as_path_list/from_path.fail.rs:3:16
  |
3 | #[as_path_list(foo)]
  |                ^^^
