codama-syn-helpers/tests-macros/tests/as_path_list/from_path.fail.rs
use codama_syn_helpers_test_macros::as_path_list;

#[as_path_list(foo)]
pub struct Test;

fn main() {}
